# TMSuperpoweredSample

./: README.md  app.json  package-lock.json  package.json
android/: settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/richinevan/TMSuperpoweredSample/: MainActivity.kt  MainApplication.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/values/: strings.xml
app/: index.tsx
cpp/: MySuperpoweredModule.cpp  MySuperpoweredModule.h  NativeSuperpoweredModule.cpp  NativeSuperpoweredModule.h  OnLoad.cpp
ios/: Gemfile  NativeSuperpoweredModuleProvider.h  NativeSuperpoweredModuleProvider.mm  Podfile
ios/TMSuperpoweredSample/: Info.plist
ios/TMSuperpoweredSample.xcodeproj/: project.pbxproj
ios/TMSuperpoweredSample.xcodeproj/xcshareddata/xcschemes/: TMSuperpoweredSample.xcscheme
ios/TMSuperpoweredSample.xcworkspace/: contents.xcworkspacedata
specs/: NativeSpecs.tsx  NativeSuperpoweredModule.tsx
